# RealTimeCollatzVis

./: .gitignore  CMakeLists.txt  DataUpdater.cpp  DataUpdater.h  README.md  README.txt  RealTimeCollatzVis.pro  SequenceHolder.cpp  SequenceHolder.h  _CMakeLists.txt  mainwindow.ui  messageParser.cpp  messageParser.h  serverReceiverParse.cpp
include/: DataUpdater.h  SequenceHolder.h  mainwindow.h  messageParser.h
src/: CMakeLists.txt  DataUpdater.cpp  SequenceHolder.cpp  main.cpp  mainwindow.cpp  messageParser.cpp  serverReceiverParse.cpp
testQT2/: mainwindow.cpp  mainwindow.h  testQT2.pro
